--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,10 +1,101 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html th:lang="${#locale.language}" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Login Pages</title>
+    <title>Login </title>
+    
+    <!-- Turkce karakter -->
+    <meta charset="utf-8">
+    
+    <!-- responsive design -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
+    <!-- seo -->
+    <meta name="keywords" content="html5,css3,js,jquery,bootstrap,react,javase" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    
+    <!-- font-awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
+    
+    <!-- google font -->
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&display=swap" rel="stylesheet">
+    
+    <!-- Bootstrap CSS v5.0.2 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
+    
+    <!-- jquery  -->
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    
+    <!-- react libraries -->
+    <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+    
+    <link rel="stylesheet" th:href="@{/css/index.css}">
+    <script th:src="@{/js/index.js}"></script>
 </head>
+
 <body>
 
+<!-- start codes -->
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 col-sm-12 col-md-offset--3">
+
+            <!-- success message-->
+            <div th:if="${param.success}">
+                <div class="alert alert-primary alert-dismissible fade mt-5 show" role="alert">
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    <strong th:text="#{login.success}"></strong>
+                </div>
+            </div>
+
+            <!-- logout message-->
+            <div th:if="${param.logout}">
+                <div class="alert alert-dark alert-dismissible fade show" role="alert">
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    <strong  th:text="#{login.logout}"></strong>
+                </div>
+            </div>
+
+            <h1  th:text="#{login.page}"></h1>
+            <form th:action="@{/login}" method="post">
+                <div class="form-group mt-3 mb-3">
+                    <!-- Dikkat: label for input id arar. -->
+                    <label for="username">Email Adresiniz</label>
+                    <input type="email" class="form-control" id="username" name="username"
+                        placeholder="Email adresinizi giriniz" autofocus="true" />
+                </div>
+                <div class="form-group mt-3 mb-3">
+                    <!-- Dikkat: label for input id arar. -->
+                    <label for="password">Şifreniz</label>
+                    <input type="password" class="form-control" id="password" name="password"
+                        placeholder="Şifrenizi  giriniz" />
+                </div>
+                <div class="form-group mt-3 mb-3">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <input type="submit" name="login-submit" id="login-submit" class="btn btn-primary"
+                                value="GİRİŞ" />
+                        </div>
+                    </div>
+                </div>
+                <div th:if="${param.error}">
+                    <div class="alert alert-danger">Geçersiz Kullanıcı Adı veya Şifre girdiniz veya Kayıt olunuz Tekrar deneyiniz</div>
+                </div>
+            </form>
+
+            <div class="form-group mb-2">
+                <span> <a th:href="@{/user/register}">Kayıt olmak ister misiniz ?</a></span>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- ends codes -->
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
