--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,7 +37,6 @@
 <!-- External CSS -->
 <link rel="stylesheet" th:href="@{/css/index.css}">
 
-
 <!-- animate CSS-->
 <link rel="stylesheet" th:href="@{/css/animate.min.css}">
 <!-- wow js-->
@@ -55,7 +54,6 @@
 </head>
 
 <body  class="scrollbar-auto" data-bs-spy="scroll" data-bs-target="#navbar-example">
-
 
 
     <!-- Navbar start -->
@@ -81,34 +79,42 @@
             <div class="collapse navbar-collapse" id="navbar_id">
                 <!-- Left links -->
                 <ul class="navbar-nav me-auto ms-5 mb-2 mb-lg-0">
+
                     <li class="nav-item">
-                        <a class="nav-link me-2" href="#ability"> <i class="fa-brands fa-battle-net"></i>Ability</a>
+                        <a class="nav-link" href="#section10"><i class="fa-solid fa-briefcase"></i>Çalışmalar</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#section_3"> <i class="fa-solid fa-rectangle-ad"></i>NewsPaper</a>
+                        <a class="nav-link" href="#counter"><i class="fa-regular fa-thumbs-up"></i>Başarılar</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="#ability"><i class="fa-brands fa-think-peaks"></i>Yetenek</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="#whoIAm"><i class="fa-solid fa-user-secret"></i> Ben Kimim</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="#section_3"><i class="fa-solid fa-newspaper"></i>Haberler</a>
                     </li>
 
                     <li class="nav-item">
                         <a class="nav-link" href="#section_2"><i class="fa-solid fa-blog"></i>Blog</a>
                     </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link" href="#section_6"> <i class="fa-solid fa-address-card"></i>Contact</a>
-                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="" id="dropdownId"
+                           data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa-solid fa-people-group"></i> </a>
+                        <div class="dropdown-menu" aria-labelledby="dropdownId">
 
-                    <li class="nav-item">
-                        <a class="nav-link" href="#section_7"> <i class="fa-solid fa-people-group"></i>About Me</a>
-                    </li>
-
-                    <li class="menu-item">
-                        <div class="ui-widget">
-                            <input id="tags">
+                            <a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#loginId" ><i class="fa-solid fa-people-group"></i> Üye Giriş</a>
+                            <a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#registerId" ><i class="fa-solid fa-people-group"></i>Register</a>
+                            <a class="dropdown-item" href="#section_7"><i class="fa-solid fa-people-group"></i> Hakkımızda</a>
+                            <a class="dropdown-item" href="#section_6"><i class="fa-solid fa-address-card"></i> İletişim</a>
                         </div>
                     </li>
-
-
-
 
                     <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown"
@@ -122,18 +128,41 @@
                 <!-- Left links -->
 
                 <div class="d-flex align-items-center" id="right_navbar">
-                    <button data-bs-toggle="modal" data-bs-target="#modelId" type="button"
-                        class="btn btn-link px-3 me-2">
-                        <i class="fa-solid fa-user-large" style="color:#ffca05"></i>
-                    </button>
-                    <button data-bs-toggle="modal" data-bs-target="#registerId" type="button"
-                        class="btn btn-primary btn-sm me-3">
-                        Register
-                    </button>
-                    <a class="btn btn-dark px-3" href="https://github.com/hamitmizrak/TeachCareer_Tubisad" role="button"><i
+                    <a class="btn btn-dark px-3" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample"><i class="fa-solid fa-right-to-bracket"></i></a>
+                    <a class="btn btn-dark px-3" href="https://github.com/hamitmizrak/Turkcell_FullStackDevelopment_Frontend_Backend.git" role="button"><i
                             class="fab fa-github"></i></a>
+                    <input type="text" name="search" placeholder="Search..">
                 </div>
             </div>
+
+
+
+<!--offcanvas: login register-->
+            <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+                <div class="offcanvas-header">
+                    <h6 class="offcanvas-title" id="offcanvasExampleLabel">Üye Girişi ve Üye Ol (Off Canvas)</h6>
+                    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+
+                    <div><a  th:href="@{/login}"><i class="fa-solid fa-user me-4"></i>Üye Girişi</a></div>
+                    <div> <a  th:href="@{/user/register}"><i class="fa-solid fa-user-check me-3"></i>Kayıt Olmak</a></div>
+
+
+                    <div class="dropdown mt-3 d-none">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown">
+                            Dropdown button
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+
             <!-- Collapsible wrapper -->
         </div>
         <!-- Container wrapper -->
@@ -145,11 +174,11 @@
 
     <!-- Modal : Login -->
     <!-- modal-login start -->
-    <div class="modal fade" id="modelId" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+    <div class="modal fade" id="loginId" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h6 class="modal-title">Login</h6>
+                    <h6 class="modal-title">Üye Giriş</h6>
                     <button type="button" class="btn-close btn-sm" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -236,7 +265,7 @@
                         </div>
                     </div>
                 </div>
-            
+
                 <!-- Email input -->
                 <div class="form-outline mb-4">
                     <div class="container">
@@ -254,7 +283,7 @@
                         </div>
                     </div>
                 </div>
-            
+
                 <!-- Password input -->
                 <div class="form-outline mb-4">
                     <div class="container">
@@ -272,7 +301,7 @@
                         </div>
                     </div>
                 </div>
-            
+
                 <!-- button -->
                 <div class="container">
                     <div class="mt-2 mb-2">
@@ -315,7 +344,7 @@
 
     <!-- main-start -->
     <main>
-        <!-- section-10 ends : Icon -->
+        <!-- section-10 ends : Icon Çalışmalar -->
         <section id="section10">
             <div class="icon_message">
                 <h2 class="text-center text-uppercase wow slideInLeft mb-5">Çalışmalarımız</h2>
@@ -352,14 +381,14 @@
         </section>
         <!-- section-10 ends : Icon -->
 
-    <!-- section-2 start -->
+    <!-- section-2 start Başarılarımız -->
     <section id="counter" class="wow slideInLeft  ">
         <div class="container" style="margin-top: 3rem; margin-bottom: 3rem">
             <div class="counter-header">
-                <h3>Bizi Yakında Takip Etmek ister misiniz ?</h3>
-                <p>Başarı Counter</p>
+                <h3>Başarılarımız</h3>
+                <p>Müşteri Memnuniyeti</p>
             </div>
-    
+
             <div class="row counters">
                 <div class="col-lg-3 col-md-6 mx-auto text-center wow rotateInDownLeft animated"
                 data-wow-duration="1s" data-wow-delay=".7s" >
@@ -367,21 +396,21 @@
                     <span data-toggle="counter-up" class="wow bounceIn">+36.000</span>
                     <p class="text-center">Çalışma Saati</p>
                 </div>
-    
+
                 <div class="col-lg-3 col-md-6 mx-auto text-center wow rotateInDownLeft animated"
                 data-wow-duration="1s" data-wow-delay=".8s">
                     <i class="fa-solid fa-list-check"></i>
                     <span data-toggle="counter-up">55</span>
                     <p class="text-center">Proje</p>
                 </div>
-    
+
                 <div class="col-lg-3 col-md-6 mx-auto text-center wow rotateInDownLeft animated"
                 data-wow-duration="1s" data-wow-delay=".9s">
                     <i class="fa-solid fa-laptop-code"></i>
                     <span data-toggle="counter-up">1000.000</span>
                     <p class="text-center">Satır Kod</p>
                 </div>
-    
+
                 <div class="col-lg-3 col-md-6 mx-auto text-center wow rotateInDownLeft animated"
                 data-wow-duration="1s" data-wow-delay="1s">
                     <i class="fa-brands fa-buffer"></i>
@@ -394,10 +423,10 @@
     <!-- section-2 end -->
     <!-- section-2 end -->
 
-        <!-- section-1 start : ability -->
+        <!-- section-1 start : Yetenekler -->
         <section id="ability">
             <div class="container">
-                <p class="text-uppercase display-6 text-center text-light">Ability</p>
+                <p class="text-uppercase display-6 text-center text-light">Yetenekler</p>
                 <div class="row">
                     <div class="col-md">
                         <div class="card  wow rotateInDownLeft animated">
@@ -449,10 +478,10 @@
         <!-- section-1 end -->
 
         <!-- parallax scrolling start -->
-        <section class="parallax_class">
+        <section class="parallax_class" id="whoIAm">
             <div class="container">
                 <div class="row">
-                    <h2 class="text-center text-primary">Parallax Data</h2>
+                    <h2 class="text-center text-primary">Biz Kimiz ?</h2>
                     <p class="text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae alias ad nam, dolorum praesentium
                         aspernatur dolores recusandae, animi maiores, natus debitis nesciunt nobis ex molestiae quidem
                         in nemo ullam doloribus.
@@ -479,12 +508,12 @@
                         iure
                         maiores nam cum, asperiores dolores autem deserunt molestiae placeat inventore vitae voluptate. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste voluptates hic ducimus neque accusantium facilis. Aliquam maxime hic nobis quas dolore fuga nemo mollitia quia, alias est dolorem reprehenderit voluptatibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, consectetur nisi culpa sed doloremque quia cumque aspernatur eius tempora voluptatibus placeat officiis suscipit quo aperiam, consequuntur impedit ducimus. Unde, mollitia?
                         Dolor accusantium optio sit laudantium quasi consequatur a, dolorem fugit alias numquam accusamus culpa earum eaque illo consequuntur ratione mollitia tempora, fugiat, eveniet animi quia eius unde. Velit, eum modi.
-                    
+
                     </p>
                     <div class="col-md-5"></div>
                     <div class="col-md-4">
                         <a href="" class="btn btn-outline-warning text-center btn-sm wow rotateInDownLeft animated"
-                            data-wow-delay=".80">Read me ..</a>
+                            data-wow-delay=".80">Read me .</a>
                     </div>
                 </div>
             </div>
@@ -774,7 +803,7 @@
         <section id="section_footer_2">
             <div class="container text-center text-md-start mt-5">
                 <div class="row mt-4">
-                    <!-- medium device:4 
+                    <!-- medium device:4
                     large device :3
                     xlarge device :4 -->
 
