--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -64,17 +64,24 @@
                     <input type="email" class="form-control" id="username" name="username"
                         placeholder="Email adresinizi giriniz" autofocus="true" />
                 </div>
+                <!--password-->
                 <div class="form-group mt-3 mb-3">
                     <!-- Dikkat: label for input id arar. -->
                     <label th:text="#{login.password}" for="password"></label>
                     <input type="password" class="form-control" id="password" name="password"
                         placeholder="Şifrenizi  giriniz" />
                 </div>
+                <!--remember me-->
+                <div class="form-check">
+                    <!--dikkat: name mutlaka remember-me-->
+                    <input type="checkbox" class="form-check-input" name="remember-me" id="remember"/>
+                    <!--dikkat: id ile for beraber çalışır-->
+                    <label th:text="#{login.rememberme}" class="form-check-label" for="remember"/>
+                </div>
                 <div class="form-group mt-3 mb-3">
                     <div class="row">
                         <div class="col-md-6">
-                            <input type="submit" name="login-submit" id="login-submit" class="btn btn-primary"
-                                value="GİRİŞ" />
+                            <input type="submit" name="login-submit" id="login-submit" class="btn btn-primary" value="GİRİŞ" />
                         </div>
                     </div>
                 </div>
@@ -84,7 +91,7 @@
             </form>
 
             <div class="form-group mb-2">
-                <span> <a th:text="#{login.isregister}" th:href="@{/user/register}"></a></span>
+                <span> <a th:text="#{register}" th:href="@{/user/register}"></a></span>
             </div>
         </div>
     </div>
