admin panel revize

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -131,7 +131,7 @@
                     <a class="btn btn-dark px-3" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample"><i class="fa-solid fa-right-to-bracket"></i></a>
                     <a class="btn btn-dark px-3" href="https://github.com/hamitmizrak/Turkcell_FullStackDevelopment_Frontend_Backend.git" role="button"><i
                             class="fab fa-github"></i></a>
-                    <input type="text" name="search" placeholder="Search..">
+                    <input id="tags" type="text" name="search" placeholder="Arama..">
                 </div>
             </div>
 
