--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -727,6 +727,7 @@
                         <h2 class="text-center text-uppercase text-light">Contact</h2>
                     </div>
                     <div class="col-md-6" id="contact_left">
+                        <h4 class="text-uppercase text-white">Mail</h4>
                         <form action="#!" id="contact_form">
                             <div class="row">
                                 <div class="col-md-6">
@@ -749,14 +750,15 @@
                                 </div>
                                 <div class="col-md-12">
                                     <fieldset>
-                                        <button type="reset" class="btn btn-danger">Clear </button>
-                                        <button type="submit" class="btn btn-primary">Send Message </button>
+                                        <button type="reset" class="btn btn-danger">Temizle </button>
+                                        <button type="submit" class="btn btn-primary">Mail Gönder </button>
                                     </fieldset>
                                 </div>
                             </div>
                         </form>
                     </div>
                     <div class="col-md-6" id="contact_left">
+                        <h4 class="text-uppercase text-white">google Maps</h4>
                         <div id="map">
                             <iframe
                                 src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed"
